# HandShaker

./: CMakeLists.txt  README.md
client/: main.cpp
include/: AppCommunicator.h  Logger.h  SocketWrapper.h  TCPBuffer.h  TCPConnection.h  TCPPacket.h
server/: main.cpp
src/: AppCommunicator.cpp  SocketWrapper.cpp  TCPBuffer.cpp  TCPConnection.cpp  TCPPacket.cpp
